fixed lesson summary overflow

--- a/src/Reflections/ReflectionPrompts/evaluation/_evaluation-prompts.scss
+++ b/src/Reflections/ReflectionPrompts/evaluation/_evaluation-prompts.scss
@@ -48,6 +48,10 @@
 			}
 		}
 	}
+
+	.evaluation-topics-summary {
+		overflow: auto;
+	}
 }
 
 .ludus-summary-icon {
